@@ -60,6 +60,7 @@ function check_for_missing_reskin(player)
             "classic-beacon",
             "classic-mining-drill",
             "semi-classic-mining-drill",
+            "IntermodalContainers",
         },
     }
 
@@ -86,15 +87,15 @@ function check_for_missing_reskin(player)
             if notify_mod_name then
                 global.notify[reskin].status = true
                 if count == 0 then
-                    player.print({"", "[", {"reskins-library.reskins-suite-name"}, "] ", {"reskins-notifications.reskins-notify-missing-single",
-                        {"", "[color="..message_color.."]", {"reskins-supported-mods."..notify_mod_name}, "[/color]"},
-                        {"", "[color="..message_color.."]", {"reskins-library.reskins-"..reskin.."-mod-name"}, "[/color]"}}
+                    player.print({ "", "[", { "reskins-library.reskins-suite-name" }, "] ", { "reskins-notifications.reskins-notify-missing-single",
+                        { "", "[color=" .. message_color .. "]", { "reskins-supported-mods." .. notify_mod_name }, "[/color]" },
+                        { "", "[color=" .. message_color .. "]", { "reskins-library.reskins-" .. reskin .. "-mod-name" }, "[/color]" }, },
                     })
                 else
-                    player.print({"", "[", {"reskins-library.reskins-suite-name"}, "] ", {"reskins-notifications.reskins-notify-missing-multiple",
-                        {"", "[color="..message_color.."]", {"reskins-supported-mods."..notify_mod_name}, "[/color]"},
+                    player.print({ "", "[", { "reskins-library.reskins-suite-name" }, "] ", { "reskins-notifications.reskins-notify-missing-multiple",
+                        { "", "[color=" .. message_color .. "]", { "reskins-supported-mods." .. notify_mod_name }, "[/color]" },
                         count,
-                        {"", "[color="..message_color.."]", {"reskins-library.reskins-"..reskin.."-mod-name"}, "[/color]"}}
+                        { "", "[color=" .. message_color .. "]", { "reskins-library.reskins-" .. reskin .. "-mod-name" }, "[/color]" }, },
                     })
                 end
             end
@@ -124,17 +125,17 @@ local function notify(data)
                 if data.mod_changes and data.mod_changes["reskins-library"] and data.mod_changes["reskins-library"].old_version then
                     -- 1.0.4 update
                     if migration.is_older_version(data.mod_changes["reskins-library"].old_version, "1.0.4") then
-                        player.print({"", "[", {"reskins-library.reskins-suite-name"}, "] ", {"reskins-updates.reskins-lib-1-0-4-update", {"mod-setting-name.reskins-lib-blend-mode"}}})
+                        player.print({ "", "[", { "reskins-library.reskins-suite-name" }, "] ", { "reskins-updates.reskins-lib-1-0-4-update", { "mod-setting-name.reskins-lib-blend-mode" } } })
                     end
 
                     -- 1.1.3 update
                     if not migration.is_older_version(data.mod_changes["reskins-library"].old_version, "1.1.3") then
                         if game.active_mods["reskins-bobs"] and not game.active_mods["reskins-compatibility"] then
-                            player.print({"", "[", {"reskins-library.reskins-suite-name"}, "] ", {"reskins-updates.reskins-lib-1-1-3-update-bobs", {"", "[color="..message_color.."]", {"reskins-library.reskins-compatibility-mod-name"}, "[/color]"}}})
+                            player.print({ "", "[", { "reskins-library.reskins-suite-name" }, "] ", { "reskins-updates.reskins-lib-1-1-3-update-bobs", { "", "[color=" .. message_color .. "]", { "reskins-library.reskins-compatibility-mod-name" }, "[/color]" } } })
                         end
 
                         if game.active_mods["reskins-angels"] and not game.active_mods["reskins-compatibility"] then
-                            player.print({"", "[", {"reskins-library.reskins-suite-name"}, "] ", {"reskins-updates.reskins-lib-1-1-3-update-angels", {"", "[color="..message_color.."]", {"reskins-library.reskins-compatibility-mod-name"}, "[/color]"}}})
+                            player.print({ "", "[", { "reskins-library.reskins-suite-name" }, "] ", { "reskins-updates.reskins-lib-1-1-3-update-angels", { "", "[color=" .. message_color .. "]", { "reskins-library.reskins-compatibility-mod-name" }, "[/color]" } } })
                         end
                     end
                 end
