@@ -130,3 +130,4 @@ RealisticReactorGlow=Realistic Reactor Glow
 P-U-M-P-S=Offshore P.U.M.P.S. and ground water
 semi-classic-mining-drill=Semi-Classic Mining Drill
 vanilla-loaders-hd=Vanilla Loaders
+IntermodalContainers=Intermodal Containers
